RESOLVED FIXED 83343
Fix LayoutUnit usage and rounding in RenderBlock and RenderEmbeddedObject
https://bugs.webkit.org/show_bug.cgi?id=83343
Summary Fix LayoutUnit usage and rounding in RenderBlock and RenderEmbeddedObject
Emil A Eklund
Reported 2012-04-05 18:41:53 PDT
Fix LayoutUnit usage and rounding in RenderBlock and RenderEmbeddedObject
Attachments
Patch (3.52 KB, patch)
2012-04-05 18:44 PDT, Emil A Eklund
no flags
Emil A Eklund
Comment 1 2012-04-05 18:44:38 PDT
WebKit Review Bot
Comment 2 2012-04-06 11:56:16 PDT
Comment on attachment 135963 [details] Patch Clearing flags on attachment: 135963 Committed r113471: <http://trac.webkit.org/changeset/113471>
WebKit Review Bot
Comment 3 2012-04-06 11:56:20 PDT
All reviewed patches have been landed. Closing bug.
Allan Sandfeld Jensen
Comment 4 2012-06-25 05:16:36 PDT
Comment on attachment 135963 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=135963&action=review > Source/WebCore/rendering/RenderEmbeddedObject.cpp:267 > + IntPoint roundedPoint = roundedIntPoint(pointInContainer); > > if (Scrollbar* horizontalScrollbar = view->horizontalScrollbar()) { > - if (horizontalScrollbar->shouldParticipateInHitTesting() && horizontalScrollbar->frameRect().contains(pointInContainer)) { > + if (horizontalScrollbar->shouldParticipateInHitTesting() && horizontalScrollbar->frameRect().contains(roundedPoint)) { I am curious, why is this rounding necessary?
Note You need to log in before you can comment on or make changes to this bug.