Fix LayoutUnit usage and rounding in RenderBlock and RenderEmbeddedObject https://bugs.webkit.org/show_bug.cgi?id=83343

Reviewed by Eric Seidel.

Fix usage of LayoutUnits and rounding/pixel snapping in RenderBlock and
RenderEmbeddedObject in preparation for turing on subpixel support.

No new tests, no change in functionality.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::baselinePosition):
* rendering/RenderEmbeddedObject.cpp:
(WebCore::RenderEmbeddedObject::nodeAtPoint):


Canonical link: https://commits.webkit.org/100796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113471 268f45cc-cd09-0410-ab3c-d52691b4dbfc